<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Escadinha</string>
    <string name="button1">RED</string>
    <string name="button2">ORANGE</string>
    <string name="button3">YELLOW</string>
    <string name="button4">GREEN</string>
    <string name="button5">BLUE</string>
    <string name="button6">INDIGO</string>
    <string name="button7">PINK</string>
</resources>
